[project]
name = "uutils-coreutils"
version = "0.0.1"
authors = []

[[bin]]
name = "base64"
path = "src/base64/base64.rs"

[[bin]]
name = "basename"
path = "src/basename/basename.rs"

[[bin]]
name = "cat"
path = "src/cat/cat.rs"

[[bin]]
name = "chroot"
path = "src/chroot/chroot.rs"

[[bin]]
name = "cksum"
path = "src/cksum/cksum.rs"

[[bin]]
name = "comm"
path = "src/comm/comm.rs"

[[bin]]
name = "cp"
path = "src/cp/cp.rs"

[[bin]]
name = "cut"
path = "src/cut/cut.rs"

[[bin]]
name = "dirname"
path = "src/dirname/dirname.rs"

[[bin]]
name = "du"
path = "src/du/du.rs"

[[bin]]
name = "echo"
path = "src/echo/echo.rs"

[[bin]]
name = "env"
path = "src/env/env.rs"

[[bin]]
name = "expand"
path = "src/expand/expand.rs"

[[bin]]
name = "factor"
path = "src/factor/factor.rs"

[[bin]]
name = "false"
path = "src/false/false.rs"

[[bin]]
name = "fmt"
path = "src/fmt/fmt.rs"

[[bin]]
name = "fold"
path = "src/fold/fold.rs"

[[bin]]
name = "groups"
path = "src/groups/groups.rs"

[[bin]]
name = "hashsum"
path = "src/hashsum/hashsum.rs"

[[bin]]
name = "head"
path = "src/head/head.rs"

[[bin]]
name = "hostid"
path = "src/hostid/hostid.rs"

[[bin]]
name = "hostname"
path = "src/hostname/hostname.rs"

[[bin]]
name = "id"
path = "src/id/id.rs"

[[bin]]
name = "kill"
path = "src/kill/kill.rs"

[[bin]]
name = "link"
path = "src/link/link.rs"

[[bin]]
name = "logname"
path = "src/logname/logname.rs"

[[bin]]
name = "mkdir"
path = "src/mkdir/mkdir.rs"

[[bin]]
name = "mkfifo"
path = "src/mkfifo/mkfifo.rs"

[[bin]]
name = "nl"
path = "src/nl/nl.rs"

[[bin]]
name = "nohup"
path = "src/nohup/nohup.rs"

[[bin]]
name = "paste"
path = "src/paste/paste.rs"

[[bin]]
name = "printenv"
path = "src/printenv/printenv.rs"

[[bin]]
name = "pwd"
path = "src/pwd/pwd.rs"

[[bin]]
name = "realpath"
path = "src/realpath/realpath.rs"

[[bin]]
name = "relpath"
path = "src/relpath/relpath.rs"

[[bin]]
name = "rm"
path = "src/rm/rm.rs"

[[bin]]
name = "rmdir"
path = "src/rmdir/rmdir.rs"

[[bin]]
name = "seq"
path = "src/seq/seq.rs"

[[bin]]
name = "shuf"
path = "src/shuf/shuf.rs"

[[bin]]
name = "sleep"
path = "src/sleep/sleep.rs"

[[bin]]
name = "split"
path = "src/split/split.rs"

[[bin]]
name = "sum"
path = "src/sum/sum.rs"

[[bin]]
name = "sync"
path = "src/sync/sync.rs"

[[bin]]
name = "tac"
path = "src/tac/tac.rs"

[[bin]]
name = "tail"
path = "src/tail/tail.rs"

[[bin]]
name = "tee"
path = "src/tee/tee.rs"

[[bin]]
name = "test"
path = "src/test/test.rs"

[[bin]]
name = "timeout"
path = "src/timeout/timeout.rs"

[[bin]]
name = "touch"
path = "src/touch/touch.rs"

[[bin]]
name = "tr"
path = "src/tr/tr.rs"

[[bin]]
name = "true"
path = "src/true/true.rs"

[[bin]]
name = "truncate"
path = "src/truncate/truncate.rs"

[[bin]]
name = "tsort"
path = "src/tsort/tsort.rs"

[[bin]]
name = "tty"
path = "src/tty/tty.rs"

[[bin]]
name = "uname"
path = "src/uname/uname.rs"

[[bin]]
name = "unexpand"
path = "src/unexpand/unexpand.rs"

[[bin]]
name = "uniq"
path = "src/uniq/uniq.rs"

[[bin]]
name = "unlink"
path = "src/unlink/unlink.rs"

[[bin]]
name = "uptime"
path = "src/uptime/uptime.rs"

[[bin]]
name = "users"
path = "src/users/users.rs"

[[bin]]
name = "wc"
path = "src/wc/wc.rs"

[[bin]]
name = "whoami"
path = "src/whoami/whoami.rs"

[[bin]]
name = "yes"
path = "src/yes/yes.rs"

[dependencies.rust-crypto]
git = "https://github.com/dagenix/rust-crypto"
